Style first section

--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
             <h1>Maseti Private Clinic</h1>
         </header>
         <section class="home">
-            <h2>Birthing can happen anywhere!!!</h2>
-            <p>Did you know birthing can happen anywhere, home births and water births are the way to go</p>
+            <section class="first">
+
+                <h2 class="banner">Birthing can happen anywhere!!!</h2>
+                <p>Did you know birthing can happen anywhere, home births and water births are the way to go</p>
+            </section>
+            <section class="imageSection">
+                <img src="images/picture-01.jpg" height="400">
+            </section>
         </section>
         <section class="services">
+            <h2>Services</h2>
             <h2>Antenatal Care Classes</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                 Animi vitae itaque vero obcaecati vel nesciunt necessitatibus, 
